--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OpSight</title>
+    <title>Opsight</title>
     <link rel="icon" type="image/svg+xml" href="/logo_transparent.png" />
     <meta name="description" content="Intelligent waste management system for airline catering operations. Optimize supply chain, reduce waste, and improve cart loading efficiency with computer vision and AI analytics." />
-    <meta name="author" content="OpSight" />
+    <meta name="author" content="Opsight" />
     <meta name="keywords" content="airline catering, waste management, supply chain optimization, computer vision, CRM, cart loading efficiency" />
 
-    <meta property="og:title" content="OpSight" />
+    <meta property="og:title" content="Opsight" />
     <meta property="og:description" content="Minimize waste and optimize airline catering operations with intelligent computer vision and real-time analytics." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/logo_transparent.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="OpSight" />
+    <meta name="twitter:title" content="Opsight" />
     <meta name="twitter:description" content="Optimize airline catering operations with AI-powered waste management and analytics." />
     <meta name="twitter:image" content="/logo_transparent.png" />
   </head>
